--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	
 	<name>maven-web-applications</name>
 
-	<description>Maven Web Projects for Java Project</description>
+	<description>Maven Web Project for Java Project</description>
 
 	<organization>
 		<name>Mithuns Technologies</name>
